--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
     <div class="part-1 align-items-end d-flex justify-content-center " *ngIf="enablePart1">
       <div class="tenor-gif-embed" data-postid="20250418" data-share-method="host" data-aspect-ratio="1"
         data-width="50%">
-        <a href="https://tenor.com/view/peach-goma-gif-20250418">Peach Goma Sticker</a>
+        <!-- <a href="https://tenor.com/view/peach-goma-gif-20250418">Peach Goma Sticker</a> -->
+         <img src="assets/gifs/jump-start.gif" alt="jump GIF">
+
       </div>
     </div>
 
@@ -15,8 +17,8 @@
       </div>
       <div [hidden]="checkValidNameCounter !== 0" class="tenor-gif-embed" data-postid="21959163"
         data-share-method="host" data-aspect-ratio="1" data-width="50%">
-        <a href="https://tenor.com/view/tkthao219-bubududu-panda-gif-21959163">Tkthao219 Bubududu
-          Sticker</a>
+                 <img src="assets/gifs/think.gif" alt="think GIF">
+
       </div>
       <div [hidden]="checkValidNameCounter !==1" class="tenor-gif-embed" data-postid="3741906134197657056"
         data-share-method="host" data-aspect-ratio="1" data-width="50%">
@@ -73,9 +75,9 @@
 
     <div class="part-3" *ngIf="enablePart3" @fadeSwitch>
       <div [hidden]="gifsCounter !==1" class="tenor-gif-embed" data-postid="26196091" data-share-method="host"
-        data-aspect-ratio="1.50235" data-width="50%"><a
-          href="https://tenor.com/view/tkthao219-bubududu-gif-26196091">Tkthao219 Bubududu
-          Sticker</a>from <a href="https://tenor.com/search/tkthao219-stickers">Tkthao219 Stickers</a></div>
+        data-aspect-ratio="1.50235" data-width="50%">
+         <img src="assets/gifs/coffee.gif" alt="coffee GIF">
+      </div>
       <div [hidden]="gifsCounter !==2" class="tenor-gif-embed" data-postid="12219747930029666314"
         data-share-method="host" data-aspect-ratio="1.49102" data-width="50%"><a
           href="https://tenor.com/view/sseeyall-bubu-dudu-gif-12219747930029666314">Sseeyall Bubu Dudu Sticker</a>from
