We are live 3 - final

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,7 +20,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-top: 300px;
+        padding-top: 300px;
 
         .tenor-gif-embed {
             width: 200px;
